--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<meta charset="utf-8">
-
-<div id="app"></div>
-<script src="./build/bundle.js"></script>
+<meta http-equiv="refresh" content="0; url=http://marcelotokarnia.github.io/public/index.html" />
