wrap up profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -6,31 +6,28 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Marcelo Tokarnia 🧑🏻‍💻 Resume</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- Custom fonts for this template -->
     <link
       href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="./img/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" />
     <link href="./vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
 
-    <!-- Custom styles for this template -->
     <link href="./css/resume.min.css" rel="stylesheet" />
   </head>
 
   <body id="page-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Clarence Taylor</span>
+        <span class="d-block d-lg-none">Marcelo Tokarnia</span>
         <span class="d-none d-lg-block">
           <img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
-            src="./img/profile.jpg"
+            src="./img/profile.png"
             alt=""
           />
         </span>
@@ -78,13 +75,29 @@
             <span class="text-primary">Tokarnia</span>
           </h1>
           <div class="subheading mb-5">
-            (46) 72 855 8798 ·
             <a href="mailto:marcelo.tokarnia@gmail.com">marcelo.tokarnia@gmail.com</a>
           </div>
-          <p class="lead mb-5">
-            Lorem ipsum
-            <!-- I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. -->
-          </p>
+          <div class="mb-5">
+            <p class="lead">
+              I like to bring people together by creating a safe space where people can share, teach
+              and learn. A team is much more than a bunch of people.
+            </p>
+            <p class="lead">
+              It's no secret that I do prefer to work on the backend, but I understand very well the
+              complexities of the Javascript code on the frontend as well. I previously worked with
+              all the main frontend technologies available today.
+            </p>
+            <p class="lead">
+              Well, I have to admit my weakness is styling and design. Please don't ask me to create
+              a responsive website from scratch with no template or Figma / Invision designs to base
+              myself on. My experience tells that the result will not be pretty.
+            </p>
+            <p class="lead">
+              Oh, but this page looks nice, doesn't it ? Yeah, I based myself on
+              <a href="https://github.com/BlackrockDigital/startbootstrap-resume">this template.</a>
+              I'm not gonna lie.
+            </p>
+          </div>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/marcelo-tokarnia-5a1ab2128/">
               <i class="fab fa-linkedin-in"></i>
@@ -243,8 +256,8 @@
 
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
-              <h3 class="mb-0">Instituto Tecnológico de Aeronáutica - ITA</h3>
-              <div class="subheading mb-3">Bachelor of Computer Engineering</div>
+              <h3 class="mb-0">Bachelor in Computer Engineering</h3>
+              <div class="subheading mb-3">ITA - Instituto Tecnológico de Aeronáutica</div>
               <div>São Paulo - Brazil</div>
             </div>
             <div class="resume-date text-md-right">
@@ -331,15 +344,22 @@
         <div class="w-100">
           <h2 class="mb-5">Interests</h2>
           <p>
-            Lorem ipsum
-            <!-- Apart from being a web developer, I enjoy most of my time being outdoors. In the winter,
-            I am an avid skier and novice ice climber. During the warmer months here in Colorado, I
-            enjoy mountain biking, free climbing, and kayaking.
+            When wearing my web developer hat I am very much interested in architectural problems.
+            How to structure the moving parts in the best way possible to deliver results, be
+            maintainable, be efficient and robust.
           </p>
           <p>
-            When forced indoors, I follow a number of sci-fi and fantasy genre movies and television
-            shows, I am an aspiring chef, and I spend a large amount of my free time exploring the
-            latest technology advancements in the front-end web development world. -->
+            I enjoy diving deep in the technology I'm involved in to understand on detail how
+            everything works. Sometimes that's not at all feasible due to pressing deadlines, but I
+            never forget to go back to the matter and study a bit more.
+          </p>
+          <hr />
+          <p>
+            Outside the work environment I wear many other hats that usually involve physical
+            activities. I enjoy climbing, running, hiking and I used to be internationally sponsored
+            for <a href="https://www.youtube.com/watch?v=AwZD0W4QY4c">Tricklining</a>. But I did
+            survive, so I can still code a bit more before finding my next life threatening hobbie
+            😂.
           </p>
         </div>
       </section>
@@ -349,19 +369,16 @@
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
         <div class="w-100">
           <h2 class="mb-5">Projects</h2>
-          <a href="https://marcelotokarnia.github.io/">Check my portifolio</a>
+          <a href="https://marcelotokarnia.github.io/">
+            Check out some of my hobbies / studies
+          </a>
         </div>
       </section>
     </div>
 
-    <!-- Bootstrap core JavaScript -->
     <script src="./vendor/jquery/jquery.min.js"></script>
     <script src="./vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
     <script src="./vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
     <script src="./js/resume.min.js"></script>
   </body>
 </html>
