--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>🎉Marcelo Tokarnia🎉</title>
+    <title>Marcelo Tokarnia 🧑🏻‍💻 Projects</title>
 
     <link rel="icon" type="image/png" href="./favicon.png" />
     <link rel="stylesheet" href="./global.css" />
