--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://marcelotokarnia.github.io/profile/index.html" />
+<meta http-equiv="refresh" content="0; url=https://marcelotokarnia.github.io/profile/index.html" />
