--- a/profile/index.html
+++ b/profile/index.html
@@ -369,7 +369,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
         <div class="w-100">
           <h2 class="mb-5">Projects</h2>
-          <a href="https://marcelotokarnia.github.io/">
+          <a href="https://marcelotokarnia.github.io/public/index.html">
             Check out some of my hobbies / studies
           </a>
         </div>
