--- a/profile/index.html
+++ b/profile/index.html
@@ -3,8 +3,32 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="description"
+      content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
+    />
+    <meta
+      name="keywords"
+      content="Node,Express,Svelte,SPA,Javascript,Bootstrap,Tachyons,Portfolio,Marcelo Tokarnia"
+    />
+    <meta name="author" content="Marcelo Tokarnia" />
+    <meta property="og:title" content="Marcelo Tokarnia 🧑🏻‍💻 Resume" />
+    <meta
+      property="og:description"
+      content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
+    />
+    <meta property="og:image" content="https://marcelotokarnia.github.io/profile/img/profile.png" />
+    <meta property="og:url" content="https://marcelotokarnia.github.io/" />
+    <meta name="twitter:title" content="Marcelo Tokarnia 🧑🏻‍💻 Resume" />
+    <meta
+      name="twitter:description"
+      content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
+    />
+    <meta
+      name="twitter:image"
+      content="https://marcelotokarnia.github.io/profile/img/profile.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <title>Marcelo Tokarnia 🧑🏻‍💻 Resume</title>
 
