--- a/profile/index.html
+++ b/profile/index.html
@@ -84,9 +84,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -128,6 +125,9 @@
             </a>
             <a href="https://github.com/marcelotokarnia">
               <i class="fab fa-github"></i>
+            </a>
+            <a href="https://marcelotokarnia.github.io/public/index.html">
+              Check my portifolio
             </a>
           </div>
         </div>
@@ -385,17 +385,6 @@
             survive, so I can still code a bit more before finding my next life threatening hobbie
             😂.
           </p>
-        </div>
-      </section>
-
-      <hr class="m-0" />
-
-      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
-        <div class="w-100">
-          <h2 class="mb-5">Projects</h2>
-          <a href="https://marcelotokarnia.github.io/public/index.html">
-            Check out some of my hobbies / studies
-          </a>
         </div>
       </section>
     </div>
