fix bundle size by exporting images to cloudinary

--- a/index.html
+++ b/index.html
@@ -1,28 +1,19 @@
 <head>
   <meta charset="UTF-8" />
-  <meta
-    name="description"
-    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
-  />
-  <meta
-    name="keywords"
-    content="Node,Express,Svelte,SPA,Javascript,Bootstrap,Tachyons,Portfolio,Marcelo Tokarnia"
-  />
+  <meta name="description"
+    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information." />
+  <meta name="keywords" content="Node,Express,Svelte,SPA,Javascript,Bootstrap,Tachyons,Portfolio,Marcelo Tokarnia" />
   <meta name="author" content="Marcelo Tokarnia" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta property="og:title" content="Marcelo Tokarnia 🧑🏻‍💻 Resume" />
-  <meta
-    property="og:description"
-    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
-  />
-  <meta property="og:image" content="https://marcelotokarnia.github.io/profile/img/profile.png" />
-  <meta property="og:url" content="https://marcelotokarnia.github.io/" />
+  <meta property="og:description"
+    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information." />
+  <meta property="og:image" content="https://resume.tokks.tech/img/profile.png" />
+  <meta property="og:url" content="https://resume.tokks.tech/" />
   <meta name="twitter:title" content="Marcelo Tokarnia 🧑🏻‍💻 Resume" />
-  <meta
-    name="twitter:description"
-    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
-  />
-  <meta name="twitter:image" content="https://marcelotokarnia.github.io/profile/img/profile.png" />
+  <meta name="twitter:description"
+    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information." />
+  <meta name="twitter:image" content="https://resume.tokks.tech/img/profile.png" />
   <meta name="twitter:card" content="summary_large_image" />
 </head>
-<meta http-equiv="refresh" content="0; url=https://marcelotokarnia.github.io/profile/index.html" />
+<meta http-equiv="refresh" content="0; url=https://resume.tokks.tech" />
