--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
-    />
-    <meta
-      name="keywords"
-      content="Node,Express,Svelte,SPA,Javascript,Bootstrap,Tachyons,Portfolio,Marcelo Tokarnia"
-    />
-    <meta name="author" content="Marcelo Tokarnia" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:title" content="Marcelo Tokarnia 🧑🏻‍💻 Projects" />
-    <meta
-      property="og:description"
-      content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
-    />
-    <meta property="og:image" content="https://marcelotokarnia.github.io/profile/img/profile.png" />
-    <meta property="og:url" content="https://marcelotokarnia.github.io/" />
-    <meta name="twitter:title" content="Marcelo Tokarnia 🧑🏻‍💻 Projects" />
-    <meta
-      name="twitter:description"
-      content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information."
-    />
-    <meta
-      name="twitter:image"
-      content="https://marcelotokarnia.github.io/profile/img/profile.png"
-    />
-    <meta name="twitter:card" content="summary_large_image" />
 
-    <title>Marcelo Tokarnia 🧑🏻‍💻 Projects</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description"
+    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information." />
+  <meta name="keywords" content="Node,Express,Svelte,SPA,Javascript,Bootstrap,Tachyons,Portfolio,Marcelo Tokarnia" />
+  <meta name="author" content="Marcelo Tokarnia" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta property="og:title" content="Marcelo Tokarnia 🧑🏻‍💻 Projects" />
+  <meta property="og:description"
+    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information." />
+  <meta property="og:image" content="https://resume.tokks.tech/img/profile.png" />
+  <meta property="og:url" content="https://resume.tokks.tech/" />
+  <meta name="twitter:title" content="Marcelo Tokarnia 🧑🏻‍💻 Projects" />
+  <meta name="twitter:description"
+    content="This is a short preview of my work, studies and subjects I'm interested in regarding development, hit me up for more detailed information." />
+  <meta name="twitter:image" content="https://resume.tokks.tech/img/profile.png" />
+  <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="icon" type="image/png" href="./favicon.png" />
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./build/bundle.css" />
+  <title>Marcelo Tokarnia 🧑🏻‍💻 Projects</title>
 
-    <script defer src="./build/bundle.js"></script>
-  </head>
+  <link rel="icon" type="image/png" href="./favicon.png" />
+  <link rel="stylesheet" href="./global.css" />
+  <link rel="stylesheet" href="./build/bundle.css" />
 
-  <body></body>
+  <script defer src="./build/bundle.js"></script>
+</head>
+
+<body></body>
+
 </html>
